parser.output
Terminals unused in grammar

    CHAR
    _NULL
    GOTO
    VOID
    DEFAULT
    ASSERT
    VOLATILE
    NEW


Rules useless in parser due to conflicts

  135 bexpr_: bexpr_ RELOP bexpr_


State 77 conflicts: 4 reduce/reduce
State 82 conflicts: 4 reduce/reduce
State 196 conflicts: 5 reduce/reduce
State 197 conflicts: 5 reduce/reduce
State 198 conflicts: 2 shift/reduce, 4 reduce/reduce
State 199 conflicts: 2 shift/reduce
State 201 conflicts: 5 reduce/reduce
State 202 conflicts: 7 shift/reduce, 5 reduce/reduce
State 243 conflicts: 1 reduce/reduce
State 273 conflicts: 7 shift/reduce, 5 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: fundef
    2        | sstmts
    3        | fundef sstmts

    4 sstmts: sstmt sstmts
    5       | cstmt sstmts
    6       | sstmt
    7       | cstmt

    8 sstmt: varDeclare
    9      | varAssign termination
   10      | input
   11      | ret
   12      | println
   13      | print
   14      | import
   15      | const
   16      | incdec
   17      | termination
   18      | funcall termination
   19      | breakstmt
   20      | constmt

   21 cstmt: ifstmt
   22      | while
   23      | dowhilestmt
   24      | forloop
   25      | switchstmt

   26 while: WHILE '(' expr ')' '{' sstmts '}'

   27 dowhilestmt: DO '{' sstmts '}' WHILE '(' expr ')' termination

   28 ret: RET comp termination

   29 comp: %empty
   30     | expr

   31 expr: aexpr
   32     | bexpr
   33     | terms
   34     | elvisop

   35 println: PRINTLN expr termination

   36 print: PRINT expr termination

   37 import: IMPORT t termination
   38       | IMPORT STATIC t

   39 t: ID DOT t
   40  | ID DOT MUL
   41  | ID termination
   42  | ID AS ID

   43 const: CONST ID EQ terms termination

   44 varDeclare: DT E termination
   45           | DEF E termination
   46           | DEF ID EQ '[' H ']' termination
   47           | mulDeclare

   48 mulDeclare: DEF '(' G ')' EQ '[' H ']' termination

   49 E: ID COMMA E
   50  | ID EQ expr COMMA E
   51  | ID
   52  | ID EQ expr

   53 varAssign: ID EQ expr
   54          | ID EQ '[' H ']'
   55          | mulAssign
   56          | ID op EQ terms
   57          | ID elvisassignmentop terms

   58 mulAssign: '(' G ')' EQ '[' H ']'

   59 G: ID COMMA G
   60  | DT ID COMMA G
   61  | DT ID
   62  | ID

   63 H: '[' H ']' COMMA H
   64  | terms COMMA H
   65  | terms
   66  | '[' H ']'

   67 input: DEF ID EQ infunction termination
   68      | DEF ID EQ infunction AS DT termination
   69      | DEF ID EQ SYSTEM DOT IN DOT CONSOLE '(' ')' DOT READLINE '(' ')' termination
   70      | DEF ID EQ ID DOT READLINE '(' ')' termination
   71      | ID EQ ID DOT READLINE '(' ')' termination
   72      | infunction
   73      | ID EQ infunction termination
   74      | ID EQ infunction AS DT termination

   75 infunction: SYSTEM DOT IN DOT NEWREADER '(' ')' DOT READLINE '(' ')'

   76 forloop: FOR '(' forstmt ')' forpart

   77 forpart: '{' sstmts '}'
   78        | sstmt

   79 forstmt: a TERM b TERM incdec
   80        | a TERM b TERM varAssign
   81        | var IN var

   82 a: %empty
   83  | var EQ terms
   84  | DT var EQ terms
   85  | DEF var EQ terms

   86 b: %empty
   87  | bexpr

   88 var: ID
   89    | arr

   90 arr: ID dims

   91 dims: dims dim
   92     | dim

   93 dim: '[' ID ']'
   94    | '[' INT ']'

   95 incdec: var INC
   96       | var DEC

   97 fundef: DT ID '(' arglist ')' '{' sstmts '}'
   98       | DEF ID '(' arglist ')' '{' sstmts '}'

   99 arglist: arglist COMMA arg
  100        | arg

  101 arg: %empty
  102    | DT ID
  103    | DT ID EQ expr

  104 funcall: ID '(' argumentlist ')'
  105        | ID '(' ')'

  106 argumentlist: argumentlist COMMA terms
  107             | terms

  108 ifstmt: IF '(' expr ')' then
  109       | IF '(' expr ')' then ELSE then
  110       | IF '(' expr ')' then ELSE ifstmt

  111 then: '{' sstmts '}'
  112     | sstmt

  113 switchstmt: SWITCH '(' expr ')' '{' cases '}'

  114 cases: %empty
  115      | cases case

  116 case: CASE terms COLON sstmts

  117 breakstmt: BREAK termination

  118 constmt: CONTINUE termination

  119 aexpr: terms op terms
  120      | terms BITOP terms
  121      | '(' aexpr ')'
  122      | aexpr op aexpr
  123      | aexpr BITOP aexpr
  124      | '(' terms ')'

  125 op: PLUS
  126   | MIN
  127   | DIV
  128   | MUL
  129   | MOD
  130   | POW

  131 bexpr: bexpr_ RELOP bexpr_
  132      | bexpr_ logop bexpr_
  133      | '(' bexpr ')'
  134      | NOT bexpr_

  135 bexpr_: bexpr_ RELOP bexpr_
  136       | bexpr_ LOGOP bexpr_
  137       | terms
  138       | aexpr

  139 logop: AND
  140      | OR

  141 terstmt: expr QUES terms COLON terms

  142 elvisop: expr QUES COLON terms

  143 elvisassignmentop: QUES EQ

  144 terms: INT
  145      | REAL
  146      | var
  147      | TRUE
  148      | FALSE
  149      | STRING
  150      | terstmt

  151 termination: TERM


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 26 27 48 58 69 70 71 75 76 97 98 104 105 108 109 110 113 121 124 133
    ')' (41) 26 27 48 58 69 70 71 75 76 97 98 104 105 108 109 110 113 121 124 133
    '[' (91) 46 48 54 58 63 66 93 94
    ']' (93) 46 48 54 58 63 66 93 94
    '{' (123) 26 27 77 97 98 111 113
    '}' (125) 26 27 77 97 98 111 113
    error (256)
    ID (258) 39 40 41 42 43 46 49 50 51 52 53 54 56 57 59 60 61 62 67 68 69 70 71 73 74 88 90 93 97 98 102 103 104 105
    REAL (259) 145
    INT (260) 94 144
    STRING (261) 149
    CHAR (262)
    IF (263) 108 109 110
    FOR (264) 76
    WHILE (265) 26 27
    DO (266) 27
    SWITCH (267) 113
    RET (268) 28
    BREAK (269) 117
    TRUE (270) 147
    FALSE (271) 148
    _NULL (272)
    CASE (273) 116
    GOTO (274)
    IMPORT (275) 37 38
    VOID (276)
    CONTINUE (277) 118
    STATIC (278) 38
    DEFAULT (279)
    PRINTLN (280) 35
    PRINT (281) 36
    DEF (282) 45 46 48 67 68 69 70 85 98
    IN (283) 69 75 81
    ASSERT (284)
    VOLATILE (285)
    CONST (286) 43
    CONSOLE (287) 69
    SYSTEM (288) 69 75
    TERM (289) 79 80 151
    COLON (290) 116 141 142
    NEW (291)
    NEWREADER (292) 75
    READLINE (293) 69 70 71 75
    DOT (294) 39 40 69 70 71 75
    DT (295) 44 60 61 68 74 84 97 102 103
    COMMA (296) 49 50 59 60 63 64 99 106
    shift (297)
    PLUS (298) 125
    MIN (299) 126
    MUL (300) 40 128
    DIV (301) 127
    POW (302) 130
    EQ (303) 43 46 48 50 52 53 54 56 58 67 68 69 70 71 73 74 83 84 85 103 143
    RELOP (304) 131 135
    LOGOP (305) 136
    BITOP (306) 120 123
    QUES (307) 141 142 143
    AS (308) 42 68 74
    MOD (309) 129
    AND (310) 139
    OR (311) 140
    NOT (312) 134
    INC (313) 95
    DEC (314) 96
    NOELSE (315)
    ELSE (316) 109 110


Nonterminals, with rules where they appear

    $accept (68)
        on left: 0
    program (69)
        on left: 1 2 3
        on right: 0
    sstmts (70)
        on left: 4 5 6 7
        on right: 2 3 4 5 26 27 77 97 98 111 116
    sstmt (71)
        on left: 8 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 4 6 78 112
    cstmt (72)
        on left: 21 22 23 24 25
        on right: 5 7
    while (73)
        on left: 26
        on right: 22
    dowhilestmt (74)
        on left: 27
        on right: 23
    ret (75)
        on left: 28
        on right: 11
    comp (76)
        on left: 29 30
        on right: 28
    expr (77)
        on left: 31 32 33 34
        on right: 26 27 30 35 36 50 52 53 103 108 109 110 113 141 142
    println (78)
        on left: 35
        on right: 12
    print (79)
        on left: 36
        on right: 13
    import (80)
        on left: 37 38
        on right: 14
    t (81)
        on left: 39 40 41 42
        on right: 37 38 39
    const (82)
        on left: 43
        on right: 15
    varDeclare (83)
        on left: 44 45 46 47
        on right: 8
    mulDeclare (84)
        on left: 48
        on right: 47
    E (85)
        on left: 49 50 51 52
        on right: 44 45 49 50
    varAssign (86)
        on left: 53 54 55 56 57
        on right: 9 80
    mulAssign (87)
        on left: 58
        on right: 55
    G (88)
        on left: 59 60 61 62
        on right: 48 58 59 60
    H (89)
        on left: 63 64 65 66
        on right: 46 48 54 58 63 64 66
    input (90)
        on left: 67 68 69 70 71 72 73 74
        on right: 10
    infunction (91)
        on left: 75
        on right: 67 68 72 73 74
    forloop (92)
        on left: 76
        on right: 24
    forpart (93)
        on left: 77 78
        on right: 76
    forstmt (94)
        on left: 79 80 81
        on right: 76
    a (95)
        on left: 82 83 84 85
        on right: 79 80
    b (96)
        on left: 86 87
        on right: 79 80
    var (97)
        on left: 88 89
        on right: 81 83 84 85 95 96 146
    arr (98)
        on left: 90
        on right: 89
    dims (99)
        on left: 91 92
        on right: 90 91
    dim (100)
        on left: 93 94
        on right: 91 92
    incdec (101)
        on left: 95 96
        on right: 16 79
    fundef (102)
        on left: 97 98
        on right: 1 3
    arglist (103)
        on left: 99 100
        on right: 97 98 99
    arg (104)
        on left: 101 102 103
        on right: 99 100
    funcall (105)
        on left: 104 105
        on right: 18
    argumentlist (106)
        on left: 106 107
        on right: 104 106
    ifstmt (107)
        on left: 108 109 110
        on right: 21 110
    then (108)
        on left: 111 112
        on right: 108 109 110
    switchstmt (109)
        on left: 113
        on right: 25
    cases (110)
        on left: 114 115
        on right: 113 115
    case (111)
        on left: 116
        on right: 115
    breakstmt (112)
        on left: 117
        on right: 19
    constmt (113)
        on left: 118
        on right: 20
    aexpr (114)
        on left: 119 120 121 122 123 124
        on right: 31 121 122 123 138
    op (115)
        on left: 125 126 127 128 129 130
        on right: 56 119 122
    bexpr (116)
        on left: 131 132 133 134
        on right: 32 87 133
    bexpr_ (117)
        on left: 135 136 137 138
        on right: 131 132 134 135 136
    logop (118)
        on left: 139 140
        on right: 132
    terstmt (119)
        on left: 141
        on right: 150
    elvisop (120)
        on left: 142
        on right: 34
    elvisassignmentop (121)
        on left: 143
        on right: 57
    terms (122)
        on left: 144 145 146 147 148 149 150
        on right: 33 43 56 57 64 65 83 84 85 106 107 116 119 120 124 137 141 142
    termination (123)
        on left: 151
        on right: 9 17 18 27 28 35 36 37 41 43 44 45 46 48 67 68 69 70 71 73 74 117 118


State 0

    0 $accept: . program $end

    ID        shift, and go to state 1
    IF        shift, and go to state 2
    FOR       shift, and go to state 3
    WHILE     shift, and go to state 4
    DO        shift, and go to state 5
    SWITCH    shift, and go to state 6
    RET       shift, and go to state 7
    BREAK     shift, and go to state 8
    IMPORT    shift, and go to state 9
    CONTINUE  shift, and go to state 10
    PRINTLN   shift, and go to state 11
    PRINT     shift, and go to state 12
    DEF       shift, and go to state 13
    CONST     shift, and go to state 14
    SYSTEM    shift, and go to state 15
    TERM      shift, and go to state 16
    '('       shift, and go to state 17
    DT        shift, and go to state 18

    program      go to state 19
    sstmts       go to state 20
    sstmt        go to state 21
    cstmt        go to state 22
    while        go to state 23
    dowhilestmt  go to state 24
    ret          go to state 25
    println      go to state 26
    print        go to state 27
    import       go to state 28
    const        go to state 29
    varDeclare   go to state 30
    mulDeclare   go to state 31
    varAssign    go to state 32
    mulAssign    go to state 33
    input        go to state 34
    infunction   go to state 35
    forloop      go to state 36
    var          go to state 37
    arr          go to state 38
    incdec       go to state 39
    fundef       go to state 40
    funcall      go to state 41
    ifstmt       go to state 42
    switchstmt   go to state 43
    breakstmt    go to state 44
    constmt      go to state 45
    termination  go to state 46


State 1

   53 varAssign: ID . EQ expr
   54          | ID . EQ '[' H ']'
   56          | ID . op EQ terms
   57          | ID . elvisassignmentop terms
   71 input: ID . EQ ID DOT READLINE '(' ')' termination
   73      | ID . EQ infunction termination
   74      | ID . EQ infunction AS DT termination
   88 var: ID .
   90 arr: ID . dims
  104 funcall: ID . '(' argumentlist ')'
  105        | ID . '(' ')'

    '('   shift, and go to state 47
    '['   shift, and go to state 48
    PLUS  shift, and go to state 49
    MIN   shift, and go to state 50
    MUL   shift, and go to state 51
    DIV   shift, and go to state 52
    POW   shift, and go to state 53
    EQ    shift, and go to state 54
    QUES  shift, and go to state 55
    MOD   shift, and go to state 56

    $default  reduce using rule 88 (var)

    dims               go to state 57
    dim                go to state 58
    op                 go to state 59
    elvisassignmentop  go to state 60


State 2

  108 ifstmt: IF . '(' expr ')' then
  109       | IF . '(' expr ')' then ELSE then
  110       | IF . '(' expr ')' then ELSE ifstmt

    '('  shift, and go to state 61


State 3

   76 forloop: FOR . '(' forstmt ')' forpart

    '('  shift, and go to state 62


State 4

   26 while: WHILE . '(' expr ')' '{' sstmts '}'

    '('  shift, and go to state 63


State 5

   27 dowhilestmt: DO . '{' sstmts '}' WHILE '(' expr ')' termination

    '{'  shift, and go to state 64


State 6

  113 switchstmt: SWITCH . '(' expr ')' '{' cases '}'

    '('  shift, and go to state 65


State 7

   28 ret: RET . comp termination

    ID      shift, and go to state 66
    REAL    shift, and go to state 67
    INT     shift, and go to state 68
    STRING  shift, and go to state 69
    TRUE    shift, and go to state 70
    FALSE   shift, and go to state 71
    '('     shift, and go to state 72
    NOT     shift, and go to state 73

    $default  reduce using rule 29 (comp)

    comp     go to state 74
    expr     go to state 75
    var      go to state 76
    arr      go to state 38
    aexpr    go to state 77
    bexpr    go to state 78
    bexpr_   go to state 79
    terstmt  go to state 80
    elvisop  go to state 81
    terms    go to state 82


State 8

  117 breakstmt: BREAK . termination

    TERM  shift, and go to state 16

    termination  go to state 83


State 9

   37 import: IMPORT . t termination
   38       | IMPORT . STATIC t

    ID      shift, and go to state 84
    STATIC  shift, and go to state 85

    t  go to state 86


State 10

  118 constmt: CONTINUE . termination

    TERM  shift, and go to state 16

    termination  go to state 87


State 11

   35 println: PRINTLN . expr termination

    ID      shift, and go to state 66
    REAL    shift, and go to state 67
    INT     shift, and go to state 68
    STRING  shift, and go to state 69
    TRUE    shift, and go to state 70
    FALSE   shift, and go to state 71
    '('     shift, and go to state 72
    NOT     shift, and go to state 73

    expr     go to state 88
    var      go to state 76
    arr      go to state 38
    aexpr    go to state 77
    bexpr    go to state 78
    bexpr_   go to state 79
    terstmt  go to state 80
    elvisop  go to state 81
    terms    go to state 82


State 12

   36 print: PRINT . expr termination

    ID      shift, and go to state 66
    REAL    shift, and go to state 67
    INT     shift, and go to state 68
    STRING  shift, and go to state 69
    TRUE    shift, and go to state 70
    FALSE   shift, and go to state 71
    '('     shift, and go to state 72
    NOT     shift, and go to state 73

    expr     go to state 89
    var      go to state 76
    arr      go to state 38
    aexpr    go to state 77
    bexpr    go to state 78
    bexpr_   go to state 79
    terstmt  go to state 80
    elvisop  go to state 81
    terms    go to state 82


State 13

   45 varDeclare: DEF . E termination
   46           | DEF . ID EQ '[' H ']' termination
   48 mulDeclare: DEF . '(' G ')' EQ '[' H ']' termination
   67 input: DEF . ID EQ infunction termination
   68      | DEF . ID EQ infunction AS DT termination
   69      | DEF . ID EQ SYSTEM DOT IN DOT CONSOLE '(' ')' DOT READLINE '(' ')' termination
   70      | DEF . ID EQ ID DOT READLINE '(' ')' termination
   98 fundef: DEF . ID '(' arglist ')' '{' sstmts '}'

    ID   shift, and go to state 90
    '('  shift, and go to state 91

    E  go to state 92


State 14

   43 const: CONST . ID EQ terms termination

    ID  shift, and go to state 93


State 15

   75 infunction: SYSTEM . DOT IN DOT NEWREADER '(' ')' DOT READLINE '(' ')'

    DOT  shift, and go to state 94


State 16

  151 termination: TERM .

    $default  reduce using rule 151 (termination)


State 17

   58 mulAssign: '(' . G ')' EQ '[' H ']'

    ID  shift, and go to state 95
    DT  shift, and go to state 96

    G  go to state 97


State 18

   44 varDeclare: DT . E termination
   97 fundef: DT . ID '(' arglist ')' '{' sstmts '}'

    ID  shift, and go to state 98

    E  go to state 99


State 19

    0 $accept: program . $end

    $end  shift, and go to state 100


State 20

    2 program: sstmts .

    $default  reduce using rule 2 (program)


State 21

    4 sstmts: sstmt . sstmts
    6       | sstmt .

    ID        shift, and go to state 1
    IF        shift, and go to state 2
    FOR       shift, and go to state 3
    WHILE     shift, and go to state 4
    DO        shift, and go to state 5
    SWITCH    shift, and go to state 6
    RET       shift, and go to state 7
    BREAK     shift, and go to state 8
    IMPORT    shift, and go to state 9
    CONTINUE  shift, and go to state 10
    PRINTLN   shift, and go to state 11
    PRINT     shift, and go to state 12
    DEF       shift, and go to state 101
    CONST     shift, and go to state 14
    SYSTEM    shift, and go to state 15
    TERM      shift, and go to state 16
    '('       shift, and go to state 17
    DT        shift, and go to state 102

    $default  reduce using rule 6 (sstmts)

    sstmts       go to state 103
    sstmt        go to state 21
    cstmt        go to state 22
    while        go to state 23
    dowhilestmt  go to state 24
    ret          go to state 25
    println      go to state 26
    print        go to state 27
    import       go to state 28
    const        go to state 29
    varDeclare   go to state 30
    mulDeclare   go to state 31
    varAssign    go to state 32
    mulAssign    go to state 33
    input        go to state 34
    infunction   go to state 35
    forloop      go to state 36
    var          go to state 37
    arr          go to state 38
    incdec       go to state 39
    funcall      go to state 41
    ifstmt       go to state 42
    switchstmt   go to state 43
    breakstmt    go to state 44
    constmt      go to state 45
    termination  go to state 46


State 22

    5 sstmts: cstmt . sstmts
    7       | cstmt .

    ID        shift, and go to state 1
    IF        shift, and go to state 2
    FOR       shift, and go to state 3
    WHILE     shift, and go to state 4
    DO        shift, and go to state 5
    SWITCH    shift, and go to state 6
    RET       shift, and go to state 7
    BREAK     shift, and go to state 8
    IMPORT    shift, and go to state 9
    CONTINUE  shift, and go to state 10
    PRINTLN   shift, and go to state 11
    PRINT     shift, and go to state 12
    DEF       shift, and go to state 101
    CONST     shift, and go to state 14
    SYSTEM    shift, and go to state 15
    TERM      shift, and go to state 16
    '('       shift, and go to state 17
    DT        shift, and go to state 102

    $default  reduce using rule 7 (sstmts)

    sstmts       go to state 104
    sstmt        go to state 21
    cstmt        go to state 22
    while        go to state 23
    dowhilestmt  go to state 24
    ret          go to state 25
    println      go to state 26
    print        go to state 27
    import       go to state 28
    const        go to state 29
    varDeclare   go to state 30
    mulDeclare   go to state 31
    varAssign    go to state 32
    mulAssign    go to state 33
    input        go to state 34
    infunction   go to state 35
    forloop      go to state 36
    var          go to state 37
    arr          go to state 38
    incdec       go to state 39
    funcall      go to state 41
    ifstmt       go to state 42
    switchstmt   go to state 43
    breakstmt    go to state 44
    constmt      go to state 45
    termination  go to state 46


State 23

   22 cstmt: while .

    $default  reduce using rule 22 (cstmt)


State 24

   23 cstmt: dowhilestmt .

    $default  reduce using rule 23 (cstmt)


State 25

   11 sstmt: ret .

    $default  reduce using rule 11 (sstmt)


State 26

   12 sstmt: println .

    $default  reduce using rule 12 (sstmt)


State 27

   13 sstmt: print .

    $default  reduce using rule 13 (sstmt)


State 28

   14 sstmt: import .

    $default  reduce using rule 14 (sstmt)


State 29

   15 sstmt: const .

    $default  reduce using rule 15 (sstmt)


State 30

    8 sstmt: varDeclare .

    $default  reduce using rule 8 (sstmt)


State 31

   47 varDeclare: mulDeclare .

    $default  reduce using rule 47 (varDeclare)


State 32

    9 sstmt: varAssign . termination

    TERM  shift, and go to state 16

    termination  go to state 105


State 33

   55 varAssign: mulAssign .

    $default  reduce using rule 55 (varAssign)


State 34

   10 sstmt: input .

    $default  reduce using rule 10 (sstmt)


State 35

   72 input: infunction .

    $default  reduce using rule 72 (input)


State 36

   24 cstmt: forloop .

    $default  reduce using rule 24 (cstmt)


State 37

   95 incdec: var . INC
   96       | var . DEC

    INC  shift, and go to state 106
    DEC  shift, and go to state 107


State 38

   89 var: arr .

    $default  reduce using rule 89 (var)


State 39

   16 sstmt: incdec .

    $default  reduce using rule 16 (sstmt)


State 40

    1 program: fundef .
    3        | fundef . sstmts

    ID        shift, and go to state 1
    IF        shift, and go to state 2
    FOR       shift, and go to state 3
    WHILE     shift, and go to state 4
    DO        shift, and go to state 5
    SWITCH    shift, and go to state 6
    RET       shift, and go to state 7
    BREAK     shift, and go to state 8
    IMPORT    shift, and go to state 9
    CONTINUE  shift, and go to state 10
    PRINTLN   shift, and go to state 11
    PRINT     shift, and go to state 12
    DEF       shift, and go to state 101
    CONST     shift, and go to state 14
    SYSTEM    shift, and go to state 15
    TERM      shift, and go to state 16
    '('       shift, and go to state 17
    DT        shift, and go to state 102

    $default  reduce using rule 1 (program)

    sstmts       go to state 108
    sstmt        go to state 21
    cstmt        go to state 22
    while        go to state 23
    dowhilestmt  go to state 24
    ret          go to state 25
    println      go to state 26
    print        go to state 27
    import       go to state 28
    const        go to state 29
    varDeclare   go to state 30
    mulDeclare   go to state 31
    varAssign    go to state 32
    mulAssign    go to state 33
    input        go to state 34
    infunction   go to state 35
    forloop      go to state 36
    var          go to state 37
    arr          go to state 38
    incdec       go to state 39
    funcall      go to state 41
    ifstmt       go to state 42
    switchstmt   go to state 43
    breakstmt    go to state 44
    constmt      go to state 45
    termination  go to state 46


State 41

   18 sstmt: funcall . termination

    TERM  shift, and go to state 16

    termination  go to state 109


State 42

   21 cstmt: ifstmt .

    $default  reduce using rule 21 (cstmt)


State 43

   25 cstmt: switchstmt .

    $default  reduce using rule 25 (cstmt)


State 44

   19 sstmt: breakstmt .

    $default  reduce using rule 19 (sstmt)


State 45

   20 sstmt: constmt .

    $default  reduce using rule 20 (sstmt)


State 46

   17 sstmt: termination .

    $default  reduce using rule 17 (sstmt)


State 47

  104 funcall: ID '(' . argumentlist ')'
  105        | ID '(' . ')'

    ID      shift, and go to state 66
    REAL    shift, and go to state 67
    INT     shift, and go to state 68
    STRING  shift, and go to state 69
    TRUE    shift, and go to state 70
    FALSE   shift, and go to state 71
    '('     shift, and go to state 72
    ')'     shift, and go to state 110
    NOT     shift, and go to state 73

    expr          go to state 111
    var           go to state 76
    arr           go to state 38
    argumentlist  go to state 112
    aexpr         go to state 77
    bexpr         go to state 78
    bexpr_        go to state 79
    terstmt       go to state 80
    elvisop       go to state 81
    terms         go to state 113


State 48

   93 dim: '[' . ID ']'
   94    | '[' . INT ']'

    ID   shift, and go to state 114
    INT  shift, and go to state 115


State 49

  125 op: PLUS .

    $default  reduce using rule 125 (op)


State 50

  126 op: MIN .

    $default  reduce using rule 126 (op)


State 51

  128 op: MUL .

    $default  reduce using rule 128 (op)


State 52

  127 op: DIV .

    $default  reduce using rule 127 (op)


State 53

  130 op: POW .

    $default  reduce using rule 130 (op)


State 54

   53 varAssign: ID EQ . expr
   54          | ID EQ . '[' H ']'
   71 input: ID EQ . ID DOT READLINE '(' ')' termination
   73      | ID EQ . infunction termination
   74      | ID EQ . infunction AS DT termination

    ID      shift, and go to state 116
    REAL    shift, and go to state 67
    INT     shift, and go to state 68
    STRING  shift, and go to state 69
    TRUE    shift, and go to state 70
    FALSE   shift, and go to state 71
    SYSTEM  shift, and go to state 15
    '('     shift, and go to state 72
    '['     shift, and go to state 117
    NOT     shift, and go to state 73

    expr        go to state 118
    infunction  go to state 119
    var         go to state 76
    arr         go to state 38
    aexpr       go to state 77
    bexpr       go to state 78
    bexpr_      go to state 79
    terstmt     go to state 80
    elvisop     go to state 81
    terms       go to state 82


State 55

  143 elvisassignmentop: QUES . EQ

    EQ  shift, and go to state 120


State 56

  129 op: MOD .

    $default  reduce using rule 129 (op)


State 57

   90 arr: ID dims .
   91 dims: dims . dim
